fix latter spacing

--- a/src/scss/components/_stages.scss
+++ b/src/scss/components/_stages.scss
@@ -52,7 +52,7 @@
         content: counter(li, decimal-leading-zero);
         font-weight: 900;
         line-height: 1;
-        letter-spacing: -0.13em;
+        letter-spacing: 0.01em;
         text-align: center;
         text-transform: uppercase;
         color: var(--color-blue);
