--- a/src/scss/components/gallery/_gallery.scss
+++ b/src/scss/components/gallery/_gallery.scss
@@ -29,7 +29,6 @@
     margin-bottom: rem(66);
     gap: 10px;
 
-
     @include for-width(-mobile-l) {
       grid-template-columns: repeat(2, 1fr);
       margin-bottom: rem(30);
@@ -38,6 +37,10 @@
 
     li {
       cursor: pointer;
+
+      // &:last-child {
+      //   grid-column-start: 4;
+      // }
     }
 
     @include for-width(-mobile-l) {
@@ -50,14 +53,117 @@
     &__list {
       display: grid;
       grid-template-columns: repeat(4, 1fr);
+      // grid-template-rows: repeat(12, 250px);
+      grid-template-areas:
+        "one"
+        "two"
+        "three"
+        "four"
+        "five"
+        "six"
+        "seven"
+        "eight"
+        "nine"
+        "ten"
+        "eleven"
+        "twelve";
       transform: translate(0);
       gap: 10px;
-
       animation: carousel-gallery 3s ease;
 
-      li {
-        cursor: pointer;
-      }
+      // @include for-width(-desktop-xl) {
+      //   grid-template-areas:
+      //     "one two three four"
+      //     "five six seven eight";
+      // }
+
+      // li {
+      //   //   cursor: pointer;
+
+      //   &:nth-child(1) {
+      //     grid-area: one;
+      //   }
+
+      //   &:nth-child(2) {
+      //     grid-area: two;
+      //   }
+
+      //   &:nth-child(3) {
+      //     grid-area: three;
+      //   }
+
+      //   &:nth-child(4) {
+      //     grid-area: four;
+      //   }
+
+      //   &:nth-child(5) {
+      //     grid-area: five;
+      //   }
+
+      //   &:nth-child(6) {
+      //     grid-area: six;
+      //   }
+
+      //   &:nth-child(7) {
+      //     grid-area: seven;
+      //   }
+
+      //   &:nth-child(8) {
+      //     grid-area: eight;
+      //   }
+
+      //   &:nth-child(9) {
+      //     grid-area: nine;
+      //   }
+
+      //   &:nth-child(10) {
+      //     grid-area: ten;
+      //   }
+
+      //   &:nth-child(11) {
+      //     grid-area: eleven;
+      //   }
+
+      //   &:nth-child(12) {
+      //     grid-area: twelve;
+      //   }
+
+      //   //   // &:nth-child(4) {
+      //   //   //   grid-row: 2/5;
+      //   //   // }
+
+      //   //   &:nth-child(5) {
+      //   //     grid-row: 2/6;
+      //   //   }
+
+      //   //   &:nth-child(6) {
+      //   //     grid-row: 2/4;
+      //   //   }
+
+      //   //   &:nth-child(7) {
+      //   //     grid-row: 5/6;
+      //   //   }
+
+      //   //   &:nth-child(8) {
+      //   //     grid-row: 4/6;
+      //   //   }
+
+      //   //  &:nth-child(9) {
+      //   //     grid-row: 6/11;
+      //   //   }
+
+      //   //  &:nth-child(10) {
+      //   //     grid-row: 6/7;
+      //   //   }
+
+      //   //  &:nth-child(11) {
+      //   //     grid-row: 6/9;
+      //   //   }
+
+      //   //  &:nth-child(12) {
+      //   //     grid-row: 7/12;
+      //   //   }
+      // }
     }
   }
 
